# BCI-Challenge

./: .gitignore  ACCURACY_DIAGNOSIS.md  NUMERICAL_STABILITY_GUIDE.md  ONLINE_ADAPTIVE_LDA_GUIDE.md  ONLINE_SETUP_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  REPLAY_MODE_GUIDE.md  TESTING_GUIDE.md  liblsl.pkg  main_offline_AdaptiveLDA.ipynb  main_online_AdaptiveLDA.ipynb  pyproject.toml  test.py  test_online_processing.py  test_raw.py
liblsl_extracted/: Distribution
liblsl_extracted/org.labstreaminglayer.liblsl.pkg/: Bom  PackageInfo  Payload
liblsl_lib/: liblsl.dylib
resources/configs/: bci_config.yaml
resources/models/: adaptivelda_artefact_removal.pkl  adaptivelda_model.pkl  enhanced_adaptive_lda.pkl  hybrid_lda.pkl  hybrid_lda_best.pkl  lda_params.pkl
scripts/: export_lda_params.py
src/bci/: __init__.py  clean_online.py  example_CSP_SVM_offline.py  example_CSP_offline.py  example_SAE_offline.py  example_riemann_offline.py  example_riemann_online.py  grid_search_enhanced_lda.py  main_offline.py  main_offline_AdaptiveLDA.py  main_offline_AdaptiveLDA_Comparison.py  main_offline_Advanced.py  main_offline_Baseline.py  main_offline_Baseline_p.py  main_offline_Baseline_physionet_to_target.py  main_offline_Baseline_ses.py  main_offline_CSP.py  main_offline_CombinedAdaptiveLDA.py  main_offline_MIRepNet.py  main_offline_MIRepNet_Within.py  main_offline_ModelComparison.py  main_offline_Riemann.py  main_offline_SAE.py  main_online.py  main_online_AdaptiveLDA.py  main_online_Advanced.py  main_online_Baseline.py  main_online_CombinedAdaptiveLDA.py  main_online_MIRepNet.py  (+10 more)
(+100 files in other folders)
