[project]
name = "BCI-Challenge"
version = "0.1.0"
description = "BCI Project for Practical Course Wise 2025/2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoreject>=0.4.3",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "pylsl>=1.17.6",
    "pyriemann>=0.9",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bci"]
